--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+html {
+
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
 *{
     font-family: 'Arial';
 }
@@ -65,8 +73,8 @@ h6{
     line-height: 20px;
     color: white; */
 }
-@media screen and (max-width:415px){
+@media screen and (max-width:708px){
     .img-mobil{
-        width: 340px;
+        height: auto;
     }
 }
