--- a/style.css
+++ b/style.css
@@ -61,18 +61,24 @@ h6{
     margin: 0 auto !important; 
 	float: none !important; 
 }
+.bg-mobil.col{
+    --bs-gutter-x: 0;
+}
+.container-text.col{
+    --bs-gutter-x: 0;
+    padding-left: 136px;
+}
 .bg-mobil{
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     justify-content: end;
 }
-.text-mobil{
-    padding-left: 136px;
-}
+
 .img-mobil{
     width: 704px;
 }
+
 /* .container-text{
     float: left;
 } */
@@ -94,10 +100,13 @@ h6{
     color: white; */
 }
 
-
 .container-promosi{
     margin-top: 100px;
     margin-bottom: 100px;
+    width: 1440px;
+    margin-left: auto !important; 
+    margin-right: auto !important; 
+	float: none !important; 
 }
 .container-our-service{
     width: 468px;
@@ -129,34 +138,29 @@ h6{
     margin-top: 16px;
 }
 
-.container-whyus{
+.container-card{
+    width: 1440px;
     padding-left: 136px;
     padding-right: 136px;
-    width: 1440px;
-    margin: 0 auto !important; 
-	float: none !important; 
 }   
+
+.card-whyus{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 .isi-card{
-    width: 468px;
-    height: 196px;
     border: 1px solid #D0D0D0;
     border-radius: 8px;
     padding: 24px;
     margin-right: 32px;
 }
-.card-whyus{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+
+.container-card.col{
+    width: 10000px;
 }
-.text-whyus{
-    padding-left: 0px;
-}
-.container-card{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
+
 
 @media screen and (max-width:1000px){
     body{
@@ -176,6 +180,10 @@ h6{
     .img-mobil{
         width: 360px;
 
+    }
+    .container-text.col{
+        --bs-gutter-x: 0;
+        padding-left: 16px;
     }
     .bg-mobil.col{
         --bs-gutter-x: 0rem;
@@ -200,6 +208,7 @@ h6{
         height: 228px;
     }
     .container-promosi{
+        width: 100%;
         margin-top: 60px;
     }
     .image-promosi{
@@ -221,5 +230,20 @@ h6{
     .container-isi-banner{
         width: 100%;
     }
+    .container-card{
+        width: 100%;
+        padding-left: 16px;
+        padding-right: 16px;
+
+    }
+    .isi-card.col{
+        width:100%;
+        float:left;
+        display:inline;
+    }   
+    
+    
+    
+
     
 }
